Fix bug #80126

When performing an unlinked instanceof, we also need to consider
interfaces of parent classes, as they may not have been inherited
yet.